Fix legacy footer sidebar container overflow

--- a/assets/sass/legacy/page-components/_footer.scss
+++ b/assets/sass/legacy/page-components/_footer.scss
@@ -9,6 +9,7 @@
 .footer-sidebar-container {
   border-bottom: 1px solid $silver;
   margin: 10px;
+  overflow: hidden;
 
   .footer-sidebar {
     float: left;
